# hpc

./: .gitignore
l1/: basics.cpp  hello_world.cpp  mat_mult.cpp
l2/: measure.sh  pi.cpp  plot.py
lab3/deviceQuery/: Makefile
lab3/julia/: Makefile
lab3/julia-gen-img/: Makefile
lab3/julia/common/: cpu_bitmap.h
lab3/stencil/: stencil.cu
lab4/raytrace/: Makefile  raytrace.cu  raytrace_const.cu  raytrace_const_brute.cu  raytrace_shared.cu
lab4/synchro/: sharedsum.cu
lab4/texture/: Makefile
lab5/multigpu/: Makefile
lab5/plm/: plm.cu
lab5/streams/: multi.cu  single.cu
lab6/: reverseArray.cu  reverseArray_faster.cu
mpi-lab-01/: Makefile  benchmark.c  benchmark_results.txt  hello-world-seq.c  ring.c  send-info-back.c  show-info-for-each.c
mpi-lab-02-e/: Makefile  floyd-warshall-par.c  floyd-warshall-par.cpp  floyd-warshall-seq.c  floyd-warshall-seq.cpp  generator-par.c  generator-par.cpp  generator-seq.c  graph-base.c  graph-tuils-par.c  graph-utils-par.cpp  graph-utils-seq.c  graph-utils-seq.cpp  graph-utils.h  hello-world-bcast-par.c
mpi-lab-03-e/: TO_IMPLEMENT.txt  laplace-common.h  laplace-par.cpp  ring-nonblocking.cpp  scatter-gather-max.cpp
mpi-lab-04/: Makefile  laplace-common.cpp  mult.cpp
tbb-lab-01/: CMakeLists.txt  nqueens.cpp  par-nqueens.cpp  parfor.cpp
tbb-lab-02/: CMakeLists.txt
